# sbc3

./: .gitignore  .gitmodules
art/: test_anim.aseprite
cpp_firmware/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  gen_cmake
cpp_firmware/app/: CMakeLists.txt  FreeRTOSConfig.h  STM32F405VGTx_FLASH.ld  comms.hpp  error.hpp  error_handler.hpp  gpio.cpp  gpio.hpp  irq_declarations.hpp  irq_definitions.hpp  ledstrip.cpp  ledstrip.hpp  main.c  main.cpp  screen.cpp  screen.hpp  serial.cpp  serial.hpp  startup_stm32f405xx.s  stm32f4xx_hal_msp.c  sync.hpp  system_clock_config.cpp  system_clock_config.hpp  uart.cpp  uart.hpp  util.hpp
cpp_firmware/app/hal_conf/: CMakeLists.txt  stm32f4xx_hal_conf.h
cpp_firmware/cmake/: gnu-arm-toolchain.cmake
cpp_firmware/cmsis/: CMakeLists.txt
cpp_firmware/cmsis/Device/ST/STM32F4xx/Include/: stm32f4xx.h
cpp_firmware/freertos/: LIAM_README.md
cpp_firmware/stm32f4xx_hal/: CMakeLists.txt
cpp_firmware/stm32f4xx_hal/Src/: stm32f4xx_hal.c
cubemx/keyboard_v1/: keyboard_v1.ioc
cubemx/main_board_v1/: .mxproject  Makefile  main_board_v1.ioc
cubemx/main_board_v1/Core/Inc/: main.h  stm32f4xx_hal_conf.h
cubemx/main_board_v1/Core/Src/: main.c  stm32f4xx_hal_msp.c
docs/hardware/: tlv320adc.html
firmware/: Cargo.toml
firmware/ledstrip/: Cargo.toml
firmware/ledstrip/src/: lib.rs
firmware/libui/: Cargo.toml  yellow_16_level_grayscale.pal
firmware/libui/src/: lib.rs  pixel_buffer.rs
firmware/libui/src/text/: build_font.py  font.pbm
firmware/main/: Cargo.toml  memory.x  readme.md
firmware/main/.cargo/: config.toml
firmware/main/src/: led_strip.rs  main.rs  print.rs  ssd1322.rs
firmware/main/src/ssd1322/: commands.rs  mod.rs  parallel8080.rs
firmware/pc/: Cargo.toml
firmware/pc/src/: main.rs
firmware/ssd1322/: Cargo.toml
firmware/ssd1322/src/: lib.rs
keyboard_v1/: keyboard.kicad_pcb  keyboard.kicad_pro  keyboard.kicad_sch  matrix.kicad_sch
main_board_v1/: audio.kicad_sch  mmi.kicad_sch  sbc_library.kicad_sym  sym-lib-table
main_board_v1/sbc.pretty/: MountingHole_JLCPCB_Assembly.kicad_mod  MyTP.kicad_mod
rust_firmware/: Cargo.toml
rust_firmware/libui/: Cargo.toml
rust_firmware/libui/images/: font_test.aseprite
rust_firmware/libui/src/: display_device.rs  lib.rs  pixel_buffer.rs
rust_firmware/libui/src/text/: build_font.py  font.pbm  mod.rs  readme.md
rust_firmware/main/src/: main.rs  print.rs
rust_firmware/main/src/ssd1322/: mod.rs  parallel8080.rs
rust_firmware/pc/src/: main.rs
sbc3_pcb/: audio.kicad_sch  comms.kicad_sch  fp-lib-table  sbc3_pcb.kicad_pcb  sbc3_pcb.kicad_prl  sbc3_pcb.kicad_pro  sbc3_pcb.kicad_sch
sbc3_pcb/sbc.pretty/: PJ-342.kicad_mod  SSD1322_oled_module_3.12inch.kicad_mod
vm/: .clang-format  CMakeLists.txt  README.md  as2.py  assembler.py  program.s  run.sh  sketch.md
vm/engine/: BytecodeModule.cpp  BytecodeModule.hpp  CMakeLists.txt  IPlatform.hpp  ISystemModule.hpp  Machine.cpp  Machine.hpp  Module.cpp  Module.hpp  Stack.hpp  engine.cpp  engine.hpp  engine_common.cpp  engine_common.hpp  vm.cpp  vm.hpp
vm/pc_port/: CMakeLists.txt  GraphicsModule.cpp  GraphicsModule.hpp  main.cpp
vm/programs/: smiletrail.s  smiletrail.sbcs  tilemap.sbcs
vm/tests/: CMakeLists.txt  ParseModuleHeaderTests.cpp
vm/vscode-extension-sbcs-syntax/: CHANGELOG.md  README.md  language-configuration.json  package.json
vm/vscode-extension-sbcs-syntax/syntaxes/: sbc3asm.tmLanguage.json
