[package]
name = "main"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
stm32f4 = "0.15.1"
nb = "0.1.3"

[dependencies.stm32f4xx-hal]
version = "0.17.1"
features = ["stm32f405"] # replace the model of your microcontroller here
